v1.1.15: Fix missing margin of "Watch Category" link in resource categories
(bug in original design)

--- a/spigotmc-newdark-userstyle.css
+++ b/spigotmc-newdark-userstyle.css
@@ -697,6 +697,9 @@
         background-color: transparent;
         border-color: #555;
     }
+    .resourceListMain .linkGroup.SelectionCountContainer {
+        margin: 0 11px;
+    }
     .actionFilterRow {
         border-color: #555;
     }
